<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_corner_drawable"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_b"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/dialog_title_color"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:fontFamily="@font/ubuntu_r"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:text="@string/sign_up_success_message"
        android:textColor="@color/dialog_message_color"
        android:textSize="13sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/dialog_editfield_drawable"
        android:fontFamily="@font/ubuntu_r"
        android:hint="@string/type_here"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textAlignment="viewStart"
        android:textColor="@color/app_black_color_code"
        android:textCursorDrawable="@null"
        android:textDirection="locale"
        android:textSize="14sp"
        android:theme="@style/MyEditTextBlackTheme"
        app:layout_constraintBottom_toBottomOf="@+id/message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_b"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/OK"
        android:textAllCaps="true"
        android:textColor="@color/dialog_title_color"
        android:textSize="13sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <TextView
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/ubuntu_b"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:paddingBottom="25dp"
        android:text="@string/CANCEL"
        android:textAllCaps="true"
        android:textColor="@color/dialog_title_color"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <TextView
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/ubuntu_b"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:paddingBottom="25dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/dialog_title_color"
        android:textSize="13sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

</android.support.constraint.ConstraintLayout>